aidsp-prj-manifests/demo2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo2
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
